// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RunDisplay renders active run and no stashed runs correctly 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Running: run-active                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
  no archived runs


    [refresh]"
`;

exports[`RunDisplay renders no active run and no stashed runs correctly 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Running: none                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
  no archived runs


    [refresh]"
`;

exports[`RunDisplay renders no active run and stashed runs correctly 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Running: none                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

    run-a
    run-b

    [refresh]"
`;

exports[`RunDisplay renders the active run and stashed runs 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Running: run-active                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

    run-a
    run-b

    [refresh]"
`;
